Halfway there to getting google maps working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Edinburgh Tour App</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
