--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <!--Map-->
     <string name="previous">Previous</string>
     <string name="next">Next</string>
+    <string name="view_on_map">View on map</string>
 </resources>
