--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,8 @@
     <string name="msg_google_failed">Google sign-in failed</string>
     <string name="msg_google_error_prefix">Google sign-in error: </string>
 
-    <string name="default_web_client_id"></string>
+    <!--Map-->
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
+    <string name="view_on_map">View on map</string>
 </resources>
