--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,10 +22,12 @@
     <string name="msg_google_cancelled">Google sign-in cancelled</string>
     <string name="msg_google_failed">Google sign-in failed</string>
     <string name="msg_google_error_prefix">Google sign-in error: </string>
+    <string name="no_saved_tours">You have no saved tours yet!</string>
 
     <!--Map-->
     <string name="previous">Previous</string>
     <string name="next">Next</string>
     <string name="view_on_map">View on map</string>
     <string name="back_to_menu">Back to Menu</string>
+    <string name="saved_tours">Saved Tours</string>
 </resources>
