--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="previous">Previous</string>
     <string name="next">Next</string>
     <string name="view_on_map">View on map</string>
+    <string name="back_to_menu">Back to Menu</string>
 </resources>
